[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Over The Rainbow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Interface/DeadScreen.gd" type="Script" id=2]
[ext_resource path="res://GUI/Interface/DeadScreenFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="DeadScreen" type="Control" groups=[
"Interface",
]]
margin_right = 2280.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -126.5
margin_bottom = 126.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 2280.0
margin_bottom = 50.0
custom_constants/separation = 5
alignment = 1

[node name="Distance" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 887.0
margin_right = 1337.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "So weit bist du gelaufen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistanceValue" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 1342.0
margin_right = 1392.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 2280.0
margin_bottom = 104.0
custom_constants/separation = 5
alignment = 1

[node name="Coins" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 912.0
margin_right = 1312.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Münzensammler: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinValue" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1317.0
margin_right = 1367.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 2280.0
margin_bottom = 158.0
custom_constants/separation = 5
alignment = 1

[node name="Gaps" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 898.0
margin_right = 1326.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gemeisterte Abgründe:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GapsValue" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 1331.0
margin_right = 1381.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 2280.0
margin_bottom = 212.0
custom_constants/separation = 5
alignment = 1

[node name="Obstacle" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 853.0
margin_right = 1371.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Überwundende Hindernisse:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObstacleValue" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 1376.0
margin_right = 1426.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3d" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 2280.0
margin_bottom = 253.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3d"]
margin_left = 1053.0
margin_right = 1227.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "PLAY AGAIN"

[connection signal="pressed" from="VBoxContainer/HBoxContainer3d/Button" to="." method="_on_Button_pressed"]
